tests/NormalTests/paczka1/fuzzy1/66242480.err
Error in line 3: MU5V S856 6,7
Error in line 9: 0GUjmsapugI A51 3,6
Error in line 15: B5W7Zt S61 55,8
Error in line 8: S61 S61 326,3
Error in line 22: bxfgg S61 67,1
Error in line 27: bxfgg A51 26,6
Error in line 37: 0GUjmsapugI A51 92,7
